Adapt to Java 17 constructs